<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/symptoms"
        android:padding="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <!-- symptoms -->
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:orientation="vertical" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:padding="8dp"
        android:layout_height="wrap_content"
        android:text="@string/discolouredBlotchesLeaves" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mouldLikeLeaves" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:padding="8dp"
        android:layout_height="wrap_content"
        android:text="@string/shriveledBrownLeaves" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:padding="8dp"
        android:layout_height="wrap_content"
        android:text="@string/StuntedGrowth" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="wrap_content"
        android:padding="8dp"
        android:layout_height="wrap_content"
        android:text="@string/FungalGrowth" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="wrap_content"
        android:padding="8dp"
        android:layout_height="wrap_content"
        android:text="@string/wiltingLeaves" />

    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="wrap_content"
        android:padding="8dp"
        android:layout_height="wrap_content"
        android:text="@string/witheringPlant" />

    <CheckBox
        android:id="@+id/checkBox8"
        android:layout_width="wrap_content"
        android:padding="8dp"
        android:layout_height="wrap_content"
        android:text="@string/BrownTissue" />

    <CheckBox
        android:id="@+id/checkBox9"
        android:layout_width="wrap_content"
        android:padding="8dp"
        android:layout_height="wrap_content"
        android:text="@string/BlackWhip" />
    <CheckBox
        android:id="@+id/checkBox10"
        android:layout_width="wrap_content"
        android:padding="8dp"
        android:layout_height="wrap_content"
        android:text="@string/SpindlyShoots" />
    <CheckBox
        android:id="@+id/checkBox11"
        android:layout_width="wrap_content"
        android:padding="8dp"
        android:layout_height="wrap_content"
        android:text="@string/SpindleLeaves" />
    
 
    <Button
        android:id="@+id/seeDisease"
        android:layout_width="wrap_content"
        android:padding="8dp"
        android:layout_height="wrap_content"
        android:text="@string/seeDisease" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>